--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "Shader Example",
     "author": "fw@dividuum.de",
-    "desc": "Minimal Example for a non-configurable node"
+    "desc": "Minimal Example for a non-configurable node",
+    "repository": "https://github.com/info-beamer/package-shader-example"
 }
